# Crow-demo-backend

./: CMakeLists.txt  README.md  build.sh
include/crow-backend/: Device.hpp  IDeviceRepository.hpp  InMemoryDeviceRepository.hpp  Laptop.hpp  Server.hpp
src/: Device.cpp  InMemoryDeviceRepository.cpp  Laptop.cpp  Server.cpp  main.cpp
test/: requests.http
